--- a/src/Server/package.json
+++ b/src/Server/package.json
@@ -20,16 +20,18 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "file-type": "^10.0.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "mime": "^3.0.0",
     "mime-types": "^2.1.35",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "pg": "^8.8.0",
+    "pg": "^8.12.0",
     "promise": "^8.3.0"
   },
   "devDependencies": {
