--- a/src/Server/package.json
+++ b/src/Server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google-cloud/secret-manager": "^4.2.2",
     "@google-cloud/storage": "^6.9.5",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.1",
     "busboy": "^1.6.0",
     "circular-json": "^0.5.9",
