--- a/src/Server/package.json
+++ b/src/Server/package.json
@@ -20,9 +20,9 @@
     "circular-json": "^0.5.9",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "express": "^4.21.0",
     "file-type": "^10.0.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
@@ -33,7 +33,8 @@
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "pg": "^8.12.0",
-    "promise": "^8.3.0"
+    "promise": "^8.3.0",
+    "server": "file:"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
